# ies

./: CMakeLists.txt  testies.sln
testies/: AberrationWidget.cpp  AberrationWidget.h  DeformationWidget.cpp  DeformationWidget.h  DistortionWidget.cpp  DistortionWidget.h  FieldViewWidget.cpp  FieldViewWidget.h  FootprintWidget.cpp  FootprintWidget.h  IESCartesianWidget.cpp  IESCartesianWidget.h  IESIsoWidget.cpp  IESIsoWidget.h  IESLoader.cpp  IESLoader.h  IESPolarWidget.cpp  IESPolarWidget.h  IESglwidget.cpp  IESglwidget.h  MTFViewWidget.cpp  MTFViewWidget.h  PlotBase.cpp  PlotBase.h  PlotSetting.cpp  PlotSetting.h  QCustomPlot.cpp  QImguiWidget.cpp  QImguiWidget.h  QwtPropertyBrowser.cpp  QwtPropertyBrowser.h  SimplePropertyBrowser.cpp  SimplePropertyBrowser.h  SpotDiagramWidget - 副本.cpp  SpotDiagramWidget.cpp  SpotDiagramWidget.h  StringEditWithButton.cpp  StringEditWithButton.h  StringEditorFactory.cpp  StringEditorFactory.h  (+28 more)
testies/26个常用 IES 灯光/: Erco_ies.rar
testies/26个常用 IES 灯光/Erco_ies/: 10_starpoint.IES  11_cantax.IES  12_logotec.IES  13_lightboard.IES  14_parscan.IES  15_optec.IES  16_light_board.IES  17_opton.IES  18_logotec.IES  19_cantax.IES  1_skim.IES  20_pantrac.IES  21_pollux.IES  22_pantrac.IES  23_trion.IES  24_starpoint.IES  25_floor_washlights_xs.IES  26_floor_washlights_.IES  2_compact.IES  3_starpoint.IES  4_quintessence_round.IES  5_quintessence_round_double_focus.IES  6_quintessence_square.IES  7_quadra.IES  8_quintessence_round.IES  9_quintessence_square.IES
testies/resources/qss/dark_style_sheet/qdarkstyle/: style.qss
testies/resources/qss/light_style_sheet/qlightstyle/: lightstyle.qrc  lightstyle.qss
testies/resources/shaders/: colorbar.vert  ies.frag  ies.vert  ies_spotlight.frag  ies_spotlight.vert  plane.frag  plane.vert  point.frag  point.vert
testies/test/: Type B - 03.ies  spotlight.ies
testies/x64/Release/: testies.exe.recipe
testies/x64/Release/qt/: qtvars.xml
testies/x64/Release/qt/moc/: moc_IESglwidget.cpp  moc_QCustomPlot.cpp  moc_isoluxdialog.cpp  moc_mainwindow.cpp  moc_polardialog.cpp  moc_threeDdialog.cpp
testies/x64/Release/qt/qmake/: .qmake.stash  props.txt  qtvars.pro  qtvars.vcxproj
testies/x64/Release/qt/rcc/: qrc_res.cpp
testies/x64/Release/qt/uic/: ui_isoluxdialog.h  ui_mainwindow.h  ui_polardialog.h  ui_threeddialog.h
testies/x64/Release/testies.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  moc.read.1u.tlog  moc.write.1u.tlog  rcc.read.1u.tlog  rcc.write.1u.tlog  testies.lastbuildstate  testies.write.1u.tlog  uic.read.1u.tlog  uic.write.1u.tlog
testies/新建文件夹/: Type B - 04.ies  Type C - 01.ies  Type C - 02.ies  Type C - 05.IES  Type C - 06.ies  Type C - Annotated.ies
x64/Release/: Qt5Svg.lib  gsl.lib  port.lib  property.lib  qmlvtkplugin.exp  qmlvtkplugin.lib  qwt.lib  qwtplot3d.lib  vtkChartsCore-9.1.exp  vtkChartsCore-9.1.lib  vtkCommonColor-9.1.exp  vtkCommonColor-9.1.lib  vtkCommonComputationalGeometry-9.1.exp  vtkCommonComputationalGeometry-9.1.lib  vtkCommonCore-9.1.exp  vtkCommonCore-9.1.lib  vtkCommonDataModel-9.1.exp  vtkCommonDataModel-9.1.lib  vtkCommonExecutionModel-9.1.exp  vtkCommonExecutionModel-9.1.lib  vtkCommonMath-9.1.exp  vtkCommonMath-9.1.lib  vtkCommonMisc-9.1.exp  vtkCommonMisc-9.1.lib  vtkCommonSystem-9.1.exp  vtkCommonSystem-9.1.lib  vtkCommonTransforms-9.1.exp  vtkCommonTransforms-9.1.lib  vtkDICOMParser-9.1.exp  vtkDICOMParser-9.1.lib  vtkDomainsChemistry-9.1.exp  vtkDomainsChemistry-9.1.lib  vtkDomainsChemistryOpenGL2-9.1.exp  vtkDomainsChemistryOpenGL2-9.1.lib  vtkFiltersAMR-9.1.exp  vtkFiltersAMR-9.1.lib  vtkFiltersCore-9.1.exp  vtkFiltersCore-9.1.lib  vtkFiltersExtraction-9.1.exp  vtkFiltersExtraction-9.1.lib  (+256 more)
